--- a/views/admin.html
+++ b/views/admin.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/dual-listbox/dist/dual-listbox.css"/>
     <link rel="stylesheet" href="style/duallist.css">
+    <link rel="stylesheet" href="style/kakao_map.css">
 </head>
 
 
@@ -104,7 +105,7 @@
                                         <div class="input-group flex-nowrap">
                                             <span class="input-group-text">학교</span>
                                             <input type="text" id="school" name="school" class="form-control" maxlength="45">
-                                            <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#schoolSerch" aria-controls="home" aria-selected="true">검색</button>
+                                            <button type="button" class="btn btn-success" onclick="openModal()" aria-controls="home" aria-selected="true">검색</button>
                                         </div>
                                     </div>
                                     <div style="padding-bottom: 0.5rem; display: none;" class="col-sm-6 col-lg-3" id="gen_region">
@@ -237,18 +238,33 @@
         </div>
     </div>
     <div class="modal" id="schoolSerch">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title">학교 검색</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p>Modal body text goes here.</p>
+                    <div class="map_wrap">
+                        <div class="maps" id="kakao_map" style="width:100%;height:100%;position:relative;overflow:hidden;"></div>
+                        <div id="menu_wrap" class="bg_white">
+                            <div class="option">
+                                <div class="input-group" style="margin-bottom: 1rem;">
+                                    <input type="text" name="search_map" id="search_map" class="form-control" placeholder="검색" onkeypress="if(window.event.keyCode==13) { search_school() }">
+                                    <a class="input-group-text" href="#" onclick="search_school()">
+                                        <i class="fa-solid fa-magnifying-glass"></i>
+                                    </a>
+                                </div>
+                            </div>
+                            <hr>
+                            <ul id="placesList"></ul>
+                            <div id="pagination"></div>
+                        </div>
+                    </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
-                    <button type="button" class="btn btn-primary">완료</button>
+                    <!-- <button type="button" class="btn btn-primary">완료</button> -->
                 </div>
             </div>
         </div>
@@ -286,6 +302,9 @@
     <script src="js/range_picker.js"></script>
     <script src="js/permission_manage.js"></script>
     <script src="js/member_control.js"></script>
+    <script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=826fecb6d8bc041c95f1ebfbd7dedcdc&libraries=services"></script>
+    <script src="js/kakao_map.js"></script>
+    
     <script>
         var multiplelist = null;
         var devices = [];
