--- a/views/members/register.html
+++ b/views/members/register.html
@@ -160,7 +160,7 @@
     </div>
 </div>
 <div class="modal" id="schoolSerch" tabindex="-1">
-    <div class="modal-dialog modal-lg">
+    <div class="modal-dialog modal-lg modal-fullscreen-lg-down">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">학교 검색</h5>
