--- a/views/index.html
+++ b/views/index.html
@@ -11,6 +11,42 @@
     <link rel="stylesheet" href="style/sidebar.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="style/style.css">
+    <style>
+        .device_card {
+            box-shadow: 7px 7px rgba(0, 0, 0, 0.2);
+        }
+        .card_row {
+            flex: 1;
+        }
+        .devices {
+            display: flex; 
+            align-items: center;
+        }
+        .device_img {
+            width: 120px; height: 80px; margin-right: 1rem; border-radius: 10px;
+        }
+        .device_permission {
+            margin: auto 3rem;
+        }
+        @media screen and (max-width: 673px) {
+            .devices {
+                flex-direction: column;
+                align-items: normal;
+            }
+            .device_img {
+                width: 100%;
+                height: 50%;
+            }
+            .device_permission {
+                margin: 0;
+                display: flex;
+                justify-content: end;
+            }
+            .card_row {
+                margin-top: 0.5rem;
+            }
+        }
+    </style>
 </head>
 
 
@@ -54,12 +90,6 @@
                         <span class="nav_name">대시보드</span>
                     </a>
                     <ul id="pages" class="sidebar-dropdown list-unstyled collapse" data-bs-parent="#sidebar">
-                        <!-- <a href="#" class="nav_link">
-                            <i class='bx bx-devices nav_icon'></i> <span class="nav_name">fdssdfsdffsdfsddsfdssfdsdfdfsdsdf</span>
-                        </a>
-                        <a href="#" class="nav_link">
-                            <i class='bx bx-devices nav_icon'></i> <span class="nav_name">가입승인</span>
-                        </a> -->
                     </ul>
                     <a href="/student_manage" class="nav_link" id="stumanag">
                         <i class='bx bx-user nav_icon'></i> <span class="nav_name">학생관리</span>
@@ -98,6 +128,7 @@
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
     <script src="js/sidebar.js"></script>
     <script src="js/memberAuth.js"></script>
     <script src="js/draw_devices.js"></script>
@@ -109,12 +140,20 @@
                 data: { id: id },
                 success:function(data) {
                     let html = '';
+                    console.log(data);
                     $.each(data, (i, val) => {
-                        html += `<div class="card" style="margin-bottom: 1rem;">
+                        html += `<div class="card device_card" style="margin-bottom: 1rem;">
                                     <a href="#" onclick="window.location = ('/dashboard?${name=val.name},${device=val.device_id}')" style="color: black;">
-                                        <div class="card-header">기기명: ${val.name}</div>
-                                        <div class="card-body">
-                                            <span id="device_date_${i}">가입일: ${val.time}</span>
+                                        <div class="card-body devices" style="display: flex;">
+                                            <img class="device_img" src="imgs/sample.png">
+                                            <div class="row card_row">
+                                                <span style="font-weight: bold; font-size: 16px; padding-bottom: 0.3rem;">기기명: ${val.name}</span>
+                                                <span id="device_date_${i}">설치일: ${dayjs(val.time).format("YYYY-MM-DD")}</span>
+                                                <span id="device_join_${i}">가입일: ${dayjs(val.join).format("YYYY-MM-DD")}</span>
+                                            </div>
+                                            <div class="device_permission">
+                                                ${(val.link_level < 1) ? '<span id="device_per_${i}" style="color: red;">권한여부: N</span>' : '<span id="device_per_${i}" style="color: green;">권한여부: Y</span>'}
+                                            </div>
                                         </div>
                                     </a>
                                 </div>`
