--- a/views/members/login.html
+++ b/views/members/login.html
@@ -29,14 +29,14 @@
                     <div class="input-group-append">
                     </div>
                 </div>
+                <!-- <div class="input-group mb-3">
+                    <input type="email" id="uid" name="uid" class="form-control" placeholder="아이디" pattern="[a-zA-Z0-9]+[@][a-zA-Z0-9]+[.]+[a-zA-Z]+[.]*[a-zA-Z]*">
+                    <div class="input-group-append">
+                    </div>
+                </div> -->
                 <div class="input-group mb-3">
                     <input type="password" id="upw" name="upw" class="form-control" placeholder="비밀번호" title="영숫자 조합으로&#13;6에서 15자리까지만 입력가능합니다." 
                      required oninvalid="this.setCustomValidity('비밀번호를 확인하세요.')" oninput="this.setCustomValidity('')">
-                    <div class="input-group-append">
-                        <!-- <div class="input-group-text">
-                            <span class="fas fa-lock"></span>
-                        </div> -->
-                    </div>
                 </div>
                 <div class="mb-3">
                     <div class="icheck-primary">
