--- a/views/members/forgot_pw.html
+++ b/views/members/forgot_pw.html
@@ -14,34 +14,28 @@
 <div class="login-logo">
     <a href="/"><img src="imgs/aqufarm.png" style="height: 60px; padding: 0.5rem;"></a>
 </div>
-<div class="login-box">
+<div class="login-box" id="forgot_box">
     <!-- /.login-logo -->
     <div class="card" style="box-shadow: none">
         <div class="card-body login-card-body">
-            <form action="/register" name="userRegister" method="post">
+            <form name="userRegister">
                 <div class="mb-3">
                     <div class="input-group">
-                        <input type="text" name="name" id="uname" class="form-control" placeholder="이름" title="한글 또는 영문으로&#13;2에서 10자리까지만 입력가능합니다." 
-                        pattern="^[가-힣]{2,5}|[a-zA-Z]{2,10}" required oninvalid="this.setCustomValidity('이름을 입력하세요.')" oninput="this.setCustomValidity('')">
-                    </div>
-                </div>
-                <div class="mb-3">
-                    <div class="input-group">
-                        <input type="email" name="id" id="uid" class="form-control" placeholder="아이디">
+                        <input type="email" name="id" id="uid" class="form-control" placeholder="아이디" pattern="[a-zA-Z0-9]+[@][a-zA-Z0-9]+[.]+[a-zA-Z]+[.]*[a-zA-Z]*">
                         <button type="button" class="btn btn-success" onclick="sendmail()">인증</button>
                     </div>
                     <label id="lUid" style="color: red;" hidden>아이디를 입력하세요.</label>
                 </div>
-                <div class="mb-3">
+                <div class="mb-3" id="valid_div" hidden>
                     <div class="input-group">
                         <input type="text" name="valid" id="valid" class="form-control" placeholder="인증번호"
                         required oninvalid="this.setCustomValidity('인증번호를 입력하세요.')" oninput="this.setCustomValidity('')">
-                        <button type="button" class="btn btn-success" id="mail_button" disabled>확인</button>
+                        <button type="button" class="btn btn-success" id="mail_button" onclick="authMail()" disabled>확인</button>
                     </div>
                 </div>
                 <!-- /.col -->
                 <div class="mb-3" style="margin-top: 25px;">
-                    <button type="button" class="btn btn-success btn-block" id="reg" onclick="">비밀번호 찾기</button>
+                    <button type="button" class="btn btn-success btn-block" id="reg" onclick="change()" disabled>비밀번호 찾기</button>
                 </div>
             </form>
 
@@ -51,7 +45,48 @@
                         <a href="/login" class="text-center">로그인</a>
                     </li>
                     <li style="float: left;">
-                        <a href="/forgot_id" class="text-center">아이디 분실</a>
+                        <a href="/register" class="text-center">회원가입</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <!-- /.login-card-body -->
+    </div>
+</div>
+
+<div class="login-box" id="change_box" hidden>
+    <!-- /.login-logo -->
+    <div class="card" style="box-shadow: none">
+        <div class="card-body login-card-body">
+            <form class="form" name="userRegister" method="post">
+                <div class="mb-3">
+                    <div class="input-group">
+                        <input type="password" name="pw" id="upw" class="form-control" placeholder="비밀번호" title="영숫자 조합으로&#13;6에서 15자리까지만 입력가능합니다." 
+                        pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{6,15}$" required oninvalid="this.setCustomValidity('비밀번호를 입력하세요.')" oninput="this.setCustomValidity('')">
+                        <div class="input-group-append">
+                        </div>
+                    </div>
+                </div>
+                <div class="mb-3">
+                    <div class="input-group">
+                        <input type="password" name="pw2" id="upw2" class="form-control" placeholder="비밀번호 확인" title="영숫자 조합으로&#13;6에서 15자리까지만 입력가능합니다." 
+                        pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{6,15}$" required oninvalid="this.setCustomValidity('비밀번호를 입력하세요.')" oninput="this.setCustomValidity('')">
+                        <div class="input-group-append">
+                        </div>
+                    </div>
+                    <label id="lUpw" style="color: red;" hidden>비밀번호를 확인하세요.</label>
+                </div>
+                <div class="mb-3" style="margin-top: 25px;">
+                    <button type="button" class="btn btn-success btn-block" id="reg2" onclick="change_pw()">비밀번호 변경</button>
+                </div>
+            </form>
+            <div class="mb-3" style="font-size: 11px; ">
+                <ul style="float: right; list-style-type: none;">
+                    <li style="float: left;">
+                        <a href="/login" class="text-center">로그인</a>
+                    </li>
+                    <li style="float: left;">
+                        <a href="/register" class="text-center">회원가입</a>
                     </li>
                 </ul>
             </div>
@@ -80,7 +115,9 @@
 <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script>
-    var number = null
+    var number = null;
+    var auth = false;
+
     function sendmail() {
         $.ajax({
             url: '/duplicate',
@@ -92,6 +129,7 @@
             success: function (data) {
                 if (data) alert('존재하지 않는 회원입니다.');
                 else {
+                    $("#valid_div").attr("hidden", false);
                     $.ajax({
                         url: '/smtp',
                         method: 'post',
@@ -107,7 +145,6 @@
                 }
             }
         });
-        
     }
     
     function authMail() {
@@ -120,9 +157,46 @@
             },
             success: function(data) {
                 alert(data.msg);
-                if (data.ok) $("#reg").attr('type', 'submit');
+                if (data.ok) {
+                    auth = true;
+                    $("#reg").attr('disabled', false);
+                }
             }
         })
+    }
+
+    function change() {
+        if(!auth) alert('아이디 인증을 완료해주세요.');
+        else {
+            $("#forgot_box").attr('hidden', true);
+            $("#change_box").attr('hidden', false)
+        }
+    }
+
+
+    $(document).ready(function() {
+        $("#upw2").on("focusout", function (e) {
+            if ($("#upw").val() != $("#upw2").val())  $("#lUpw").attr("hidden", false)
+            else $("#lUpw").attr("hidden", true)
+        })
+    })
+
+    function change_pw() {
+        if ($("#upw").val() == $("#upw2").val()) {
+            $.ajax({
+                url: '/change_pw',
+                method: 'post',
+                data: {
+                    id: $("#uid").val(),
+                    pw: $("#upw").val()
+                },
+                success: function(data) {
+                    alert(data.msg);
+                    if (data.ok) window.location = (data.url);
+                    else alert(data.msg);
+                }
+            })
+        }
     }
 </script>
 </body>
